tablegen/tests/snapshots/node_types_snapshots__node_types_minimal.snap
---
source: tablegen/tests/node_types_snapshots.rs
expression: output
---
[
  {
    "type": "start",
    "named": true
  },
  {
    "type": "x",
    "named": false
  }
]
