tablegen/tests/snapshots/node_types_snapshots__node_types_two_rules.snap
---
source: tablegen/tests/node_types_snapshots.rs
expression: output
---
[
  {
    "type": "a",
    "named": false
  },
  {
    "type": "b",
    "named": false
  },
  {
    "type": "start",
    "named": true
  }
]
