tablegen/tests/snapshots/node_types_snapshots__node_types_with_extras.snap
---
source: tablegen/tests/node_types_snapshots.rs
expression: output
---
[
  {
    "type": "expr",
    "named": true
  }
]
